# HPCC-Platform

cmake_modules/: FindEV.cmake  FindMEMCACHED.cmake  FindREDIS.cmake  commonSetup.cmake
common/remote/: sockfile.cpp
common/workunit/: workunit.cpp
dali/dafilesrv/: dafilesrv.cpp
docs/ECLLanguageReference/ECLR_mods/: SpecStruc-Transform.xml
ecl/: CMakeLists.txt
ecl/eclagent/: eclagent.cpp
ecl/eclanalyser/: CMakeLists.txt  analyserparser.cpp  analyserparser.hpp  analyserpd.cpp  analyserpd.hpp  asyntaxtree.cpp  asyntaxtree.hpp  bisongram.y  bisonlex.l  syntaxtree.cpp  syntaxtree.hpp  tokendata.cpp  tokendata.hpp
ecl/eclcc/: CMakeLists.txt  eclcc.cpp  eclcc.hpp
ecl/hql/: CMakeLists.txt  eclgram.hpp  eclgram.y  ecllex.l  eclparser.cpp  hql.hpp  hqlexpr.cpp  hqlexpr.hpp  hqlgram.hpp  hqlgram.y  hqlgram2.cpp  hqllex.l  hqlparse.cpp  newparser.cpp  newparser.hpp
ecl/hqlcpp/: hqlcpp.cpp  hqlcpp.ipp  hqlcppds.cpp  hqlcppds.hpp  hqlcset.cpp  hqlhtcpp.cpp  hqlinline.cpp  hqliproj.cpp
ecl/newregress/: test002.ecl  test005.ecl  test007.ecl  test008.ecl  test010.ecl  test011.ecl  test012.ecl  test013.ecl  test014.ecl  test015.ecl  test016.ecl  test017.ecl  test018.ecl  test019.ecl  test020.ecl  test023.ecl  test026.ecl  test028.ecl  test029.ecl  test030.ecl  test031.ecl  test032.ecl  test033.ecl  test034.ecl  test035.ecl  test036.ecl  test037.ecl  test038.ecl  test039.ecl  test040.ecl  test041.ecl  test042.ecl  test043.ecl  test044.ecl  test045.ecl  test046.ecl  test047.ecl  test048.ecl  test049.ecl  test050.ecl  (+26 more)
ecl/parser/: CMakeLists.txt  eclgram.y  eclgram.y.ORIG  ecllex.l  eclparser.cpp  eclparser.hpp  newparser.ecl  parserdata.cpp  parserdata.hpp  semantics.cpp  semantics.hpp  syntaxtree.cpp  syntaxtree.hpp  tokendata.cpp  tokendata.hpp
ecl/regress/: gsoc5min.ecl  issue13109.ecl
esp/services/esdl_svc_engine/: esdl_binding.cpp
esp/services/ws_workunits/: ws_workunitsQuerySets.cpp
esp/src/eclwatch/: GraphPageWidget.js
plugins/: CMakeLists.txt
plugins/memcached/: CMakeLists.txt  memcachedplugin.cpp  memcachedplugin.hpp
plugins/pyembed/: pyembed.cpp
plugins/redis/: CMakeLists.txt  README  README.md  lib_redis.ecllib  redis.cpp  redis.hpp  redisasync.cpp  redisasync.hpp  redislock.cpp  redislock.hpp  redisplugin.cpp  redisplugin.hpp  redissync.cpp  redissync.hpp
roxie/ccd/: ccdactivities.cpp  ccdcontext.cpp
roxie/roxiemem/: roxiemem.cpp
system/jlib/: jargv.cpp  jarray.tpp  jfile.cpp  jstats.cpp  jstring.hpp
testing/ecl/: issue9906.ecl
testing/regress/ecl/: redisasynctest.ecl  rediserrortests.ecl  redislocking.ecl  redislockingtest.ecl  redissynctest.ecl
testing/regress/ecl/key/: rediserrortests.xml  redislockingtest.xml  redissynctest.xml
thorlcr/activities/hashdistrib/: thhashdistribslave.cpp
thorlcr/activities/lookupjoin/: thlookupjoinslave.cpp
thorlcr/graph/: thgraph.cpp  thgraphmaster.cpp  thgraphslave.cpp
thorlcr/thorutil/: thmem.cpp
